feat: highlight UiPath Boost and add guest book
